--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,14 @@ text-align: center;
     border-width: 3px;
 }
 
+h2{
+    font-size: 20px;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    text-decoration: bold;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+}
+
 h1{
     font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
